<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="name"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:id="@+id/nameEnter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingradients"
            android:layout_marginBottom="10dp"
            android:id="@+id/whippedCream"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="chocolate"
            android:layout_marginBottom="10dp"
            android:id="@+id/chocolate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/add_order"
                android:layout_marginRight="10dp"
                android:onClick="increment"
                android:layout_marginEnd="10dp"
                tools:ignore="UsingOnClickInXml" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_text_view"
                android:text="@string/zero"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/remove_order"
                android:layout_marginBottom="10dp"
                android:onClick="decrement"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_text_view"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
</ScrollView>